# game.libretro.mame2016

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright
depends/common/mame2016/: 0001-Fix-build.patch  CMakeLists.txt  mame2016.txt
game.libretro.mame2016/: addon.xml.in
game.libretro.mame2016/resources/: settings.xml
game.libretro.mame2016/resources/language/English/: strings.po
game.libretro.mame2016/resources/language/resource.language.af_za/: strings.po
game.libretro.mame2016/resources/language/resource.language.am_et/: strings.po
game.libretro.mame2016/resources/language/resource.language.ar_dz/: strings.po
game.libretro.mame2016/resources/language/resource.language.ar_sa/: strings.po
game.libretro.mame2016/resources/language/resource.language.ast_es/: strings.po
game.libretro.mame2016/resources/language/resource.language.az_az/: strings.po
game.libretro.mame2016/resources/language/resource.language.be_by/: strings.po
game.libretro.mame2016/resources/language/resource.language.bg_bg/: strings.po
game.libretro.mame2016/resources/language/resource.language.bs_ba/: strings.po
game.libretro.mame2016/resources/language/resource.language.ca_es/: strings.po
game.libretro.mame2016/resources/language/resource.language.cs_cz/: strings.po
game.libretro.mame2016/resources/language/resource.language.cy_gb/: strings.po
game.libretro.mame2016/resources/language/resource.language.da_dk/: strings.po
(+78 files in other folders)
